first draft - clone jira page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,24 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+<head>
+    <title> System Dashboard - Jira    </title>
+    <link href="test.css" type="text/css" media="screen" rel="stylesheet" />
+</head>
+<div>
+
+<div id="menu">
+    <span> WIX </span>
+    <span> Dashboards </span>
+    <span> Projects </span>
+    <span> Issues </span>
+    <span> Aglie </span>
+    <span> Tests </span>
+    <span> BigGantt </span>
+    <span> eazyBI </span>
+    <button type="button" id="CreateButton">Create</button>
+    <form id="SerchButton">
+        Search
+        <input type="text" name="serch_fileds">
+    </form>
+</div>
 </html>
