--- a/index.html
+++ b/index.html
@@ -4,21 +4,27 @@
     <title> System Dashboard - Jira    </title>
     <link href="test.css" type="text/css" media="screen" rel="stylesheet" />
 </head>
-<div>
 
 <div id="menu">
-    <span> WIX </span>
-    <span> Dashboards </span>
-    <span> Projects </span>
-    <span> Issues </span>
-    <span> Aglie </span>
-    <span> Tests </span>
-    <span> BigGantt </span>
-    <span> eazyBI </span>
-    <button type="button" id="CreateButton">Create</button>
+    <a id = "wix_home" href="https://jira.wixpress.com/secure/MyJiraHome.jspa">
+        <img src="https://michalhonig.github.io/Exercise/images/jira-logo-scaled.png">
+    </a>
+
+    <ul id="menu_list">
+        <li> Dashboards </li>
+        <li> Projects </li>
+        <li> Issues </li>
+        <li> Aglie </li>
+        <li> Tests </li>
+        <li> BigGantt </li>
+        <li> eazyBI </li>
+        <li><button type="button" id="CreateButton">Create</button> </li>
+    </ul>
+
     <form id="SerchButton">
         Search
         <input type="text" name="serch_fileds">
     </form>
 </div>
+
 </html>
