--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title> System Dashboard - Jira    </title>
     <link href="test.css" type="text/css" media="screen" rel="stylesheet" />
 </head>
 
-<div id="menu">
+<body>
+
+<div id="div_main_menu">
     <a id = "wix_home" href="https://jira.wixpress.com/secure/MyJiraHome.jspa">
         <img src="https://michalhonig.github.io/Exercise/images/jira-logo-scaled.png">
     </a>
@@ -27,4 +30,24 @@
     </form>
 </div>
 
+
+
+
+<footer id="footer">
+    <ul id="footer_ul">
+        <li> Atlassian JIRA </li>
+        <li id="project_management_software"> <a href="https://www.atlassian.com/software/jira"> <span>Project Management Software </span></a></li>
+        <li id="jira_version"> (v6.3.1#6329-sha1:7df76f1) </li>
+        <li> <a href="https://jira.wixpress.com/secure/AboutPage.jspa"> <span> About JIRA </span></a></li>
+        <li> <a href="https://jira.wixpress.com/secure/ContactAdministrators!default.jspa"> <span> Report a problem </span></a></li>
+    </ul>
+
+    <br>
+
+    <img src="https://michalhonig.github.io/Exercise/images/64jira.png">
+    <a id="attlasian_link" href="http://www.atlassian.com/"><span id="body_atlassian">Atlassian</span></a>
+
+</footer>
+
+</body>
 </html>
