--- a/index.html
+++ b/index.html
@@ -30,8 +30,35 @@
     </form>
 </div>
 
+<h1> System Dashboard </h1>
 
+<div id="main_divs">
+    <div id="introduction">
+        <h3>Introduction</h3>
+        <img id="introduction_img" src="https://michalhonig.github.io/Exercise/images/64jira.png">
+        <h4> Welcome to JIRA</h4>
+        <h4>New to JIRA? Check out the <a href="https://confluence.atlassian.com/jira063/jira-user-s-guide-683542423.html"> JIRA User's Guide. </a></h4>
+        <div> </div>
+    </div>
 
+    <div id="favorite_filters">
+        <h3>Favorite Filters</h3>
+        <p> You have no favorite filters at the moment.</p>
+        <a href="https://jira.wixpress.com/browse/WTS-31?jql=">Create Filter</a> |
+        <a href="https://jira.wixpress.com/secure/ManageFilters.jspa"> Manage Filter</a>
+        </p>
+    </div>
+
+    <div id="assigned_to_me">
+        <h3>Assigned to Me</h3>
+        <p>There are no issues assigned to you.</p>
+    </div>
+
+    <div id="activity_stream">
+        <h3>Activity Stream</h3>
+        <h4>jira</h4>
+    </div>
+</div>
 
 <footer id="footer">
     <ul id="footer_ul">
