--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </form>
 </nav>
 
-<h1> System Dashboard </h1>
+<h1 id ="system_dashboard"> System Dashboard </h1>
 
 <div id="main_divs">
     <div id="introduction">
@@ -62,10 +62,14 @@
 
 <footer id="footer">
     <ul id="footer_ul">
-        <li> Atlassian JIRA </li>
-        <li id="project_management_software"> <a href="https://www.atlassian.com/software/jira"> <span>Project Management Software </span></a></li>
-        <li id="jira_version"> (v6.3.1#6329-sha1:7df76f1) </li>
-        <li> <a href="https://jira.wixpress.com/secure/AboutPage.jspa"> <span> About JIRA </span></a></li>
+        <li> Atlassian JIRA
+            <a href="https://www.atlassian.com/software/jira"> <span>Project Management Software </span></a>
+            <span>(v6.3.1#6329-sha1:7df76f1)</span>
+        </li>
+        <li> <a href="https://jira.wixpress.com/secure/AboutPage.jspa"> <span> About JIRA </span> </a>
+        </li>
+
+
         <li> <a href="https://jira.wixpress.com/secure/ContactAdministrators!default.jspa"> <span> Report a problem </span></a></li>
     </ul>
 
