--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
     </a>
 
     <ul id="menu_list">
-        <li> Dashboards </li>
+        <li>
+            <a href="#">Dashboards </span></a>
+            <ul class="dashboard_sub_menu">
+                <li><a href="#">View System Dashboards</a></li>
+                <li><a href="#">Manage Dashboards</a></li>
+            </ul>
+        </li>
         <li> Projects </li>
         <li> Issues </li>
         <li> Aglie </li>
@@ -37,16 +43,17 @@
         <img id="introduction_img" src="https://michalhonig.github.io/Exercise/images/64jira.png">
         <div>
             <h4> Welcome to JIRA</h4>
-            <p>New to JIRA? Check out the <a href="https://confluence.atlassian.com/jira063/jira-user-s-guide-683542423.html"> JIRA User's Guide. </a></p>
+            <p id="new_to_jira">New to JIRA? Check out the <a href="https://confluence.atlassian.com/jira063/jira-user-s-guide-683542423.html"> JIRA User's Guide. </a></p>
         </div>
     </div>
 
     <div id="favorite_filters">
         <h3>Favorite Filters</h3>
         <p> You have no favorite filters at the moment.</p>
-        <div></div>
-        <a href="https://jira.wixpress.com/browse/WTS-31?jql=">Create Filter</a> |
-        <a href="https://jira.wixpress.com/secure/ManageFilters.jspa"> Manage Filter</a>
+        <div>
+            <a href="https://jira.wixpress.com/browse/WTS-31?jql=">Create Filter</a> |
+            <a href="https://jira.wixpress.com/secure/ManageFilters.jspa"> Manage Filter</a>
+        </div>
     </div>
 
     <div id="assigned_to_me">
