--- a/index.html
+++ b/index.html
@@ -15,18 +15,56 @@
 
     <ul id="menu_list">
         <li>
-            <a href="#">Dashboards </span></a>
+            <a href="#">Dashboards </a>
+            <ul class="dashboard_sub_menu">
+                <li><a href="#">View System Dashboards</a></li>
+                <li><a href="https://jira.wixpress.com/secure/ConfigurePortalPages!default.jspa">Manage Dashboards</a></li>
+            </ul>
+        </li>
+        <li>
+            <a href="#">Projects</a>
+            <ul class="dashboard_sub_menu">
+                <strong class="menu_list_header_list">Currnet Project</strong>
+
+                <li><a href="#">View System Dashboards</a></li>
+                <li><a href="#">Manage Dashboards</a></li>
+            </ul>
+        </li>
+        <li>
+            <a href="#">Issues</a>
             <ul class="dashboard_sub_menu">
                 <li><a href="#">View System Dashboards</a></li>
                 <li><a href="#">Manage Dashboards</a></li>
             </ul>
         </li>
-        <li> Projects </li>
-        <li> Issues </li>
-        <li> Aglie </li>
-        <li> Tests </li>
-        <li> BigGantt </li>
-        <li> eazyBI </li>
+        <li>
+            <a href="#">Aglie</a>
+            <ul class="dashboard_sub_menu">
+                <li><a href="#">View System Dashboards</a></li>
+                <li><a href="#">Manage Dashboards</a></li>
+            </ul>
+        </li>
+        <li>
+            <a href="#">Tests </a>
+            <ul class="dashboard_sub_menu">
+                <li><a href="#">View System Dashboards</a></li>
+                <li><a href="#">Manage Dashboards</a></li>
+            </ul>
+        </li>
+        <li>
+            <a href="#">BigGantt </a>
+            <ul class="dashboard_sub_menu">
+                <li><a href="#">View System Dashboards</a></li>
+                <li><a href="#">Manage Dashboards</a></li>
+            </ul>
+        </li>
+        <li>
+            <a href="#">eazyBI </a>
+            <ul class="dashboard_sub_menu">
+                <li><a href="#">View System Dashboards</a></li>
+                <li><a href="#">Manage Dashboards</a></li>
+            </ul>
+        </li>
         <li><button type="button" id="CreateButton">Create</button> </li>
     </ul>
 
