--- a/index.html
+++ b/index.html
@@ -8,64 +8,64 @@
 
 <body>
 
-<nav class="nav_main_menu" id="div_main_menu">
+<nav class="nav-main-menu" id="div_main_menu">
 
-    <div>
+    <div class="inline-block-divs">
         <a id = "wix_home" href="https://jira.wixpress.com/secure/MyJiraHome.jspa">
             <img src="https://michalhonig.github.io/Exercise/images/jira-logo-scaled.png">
         </a>
     </div>
 
-    <ul id="menu_list">
+    <ul class="main-menu-ul" id="menu_list">
         <li class="main-menu-li">
-            <a href="#">Dashboards </a>
-            <ul class="dashboard_sub_menu">
-                <li><a href="#">View System Dashboards</a></li>
-                <li><a href="https://jira.wixpress.com/secure/ConfigurePortalPages!default.jspa">Manage Dashboards</a></li>
+            <a class="main-menu-li-a" href="#">Dashboards </a>
+            <ul class="main-menu-second-level-ul">
+                <li class="main-menu-second-level-li"><a class="main-menu-second-level-li-a" href="#">View System Dashboards</a></li>
+                <li class="main-menu-second-level-li"><a class="main-menu-second-level-li-a" href="https://jira.wixpress.com/secure/ConfigurePortalPages!default.jspa">Manage Dashboards</a></li>
             </ul>
         </li>
         <li class="main-menu-li">
-            <a href="#">Projects</a>
-            <ul class="dashboard_sub_menu">
+            <a class="main-menu-li-a" href="#">Projects</a>
+            <ul class="main-menu-second-level-ul">
                 <strong class="menu_list_header_list">Currnet Project</strong>
 
-                <li><a href="#">View System Dashboards</a></li>
-                <li><a href="#">Manage Dashboards</a></li>
+                <li class="main-menu-second-level-li"><a class="main-menu-second-level-li-a" href="#">View System Dashboards</a></li>
+                <li class="main-menu-second-level-li"><a class="main-menu-second-level-li-a" href="#">Manage Dashboards</a></li>
             </ul>
         </li>
         <li class="main-menu-li">
-            <a href="#">Issues</a>
-            <ul class="dashboard_sub_menu">
-                <li><a href="#">View System Dashboards</a></li>
-                <li><a href="#">Manage Dashboards</a></li>
+            <a  class="main-menu-li-a" href="#">Issues</a>
+            <ul class="main-menu-second-level-ul">
+                <li class="main-menu-second-level-li"><a class="main-menu-second-level-li-a" href="#">View System Dashboards</a></li>
+                <li class="main-menu-second-level-li"><a class="main-menu-second-level-li-a" href="#">Manage Dashboards</a></li>
             </ul>
         </li>
         <li class="main-menu-li">
-            <a href="#">Aglie</a>
-            <ul class="dashboard_sub_menu">
-                <li><a href="#">View System Dashboards</a></li>
-                <li><a href="#">Manage Dashboards</a></li>
+            <a  class="main-menu-li-a" href="#">Aglie</a>
+            <ul class="main-menu-second-level-ul">
+                <li class="main-menu-second-level-li"><a class="main-menu-second-level-li-a" href="#">View System Dashboards</a></li>
+                <li class="main-menu-second-level-li"><a class="main-menu-second-level-li-a" href="#">Manage Dashboards</a></li>
             </ul>
         </li>
         <li class="main-menu-li">
-            <a href="#">Tests </a>
-            <ul class="dashboard_sub_menu">
-                <li><a href="#">View System Dashboards</a></li>
-                <li><a href="#">Manage Dashboards</a></li>
+            <a  class="main-menu-li-a" href="#">Tests </a>
+            <ul class="main-menu-second-level-ul">
+                <li class="main-menu-second-level-li"><a class="main-menu-second-level-li-a" href="#">View System Dashboards</a></li>
+                <li class="main-menu-second-level-li"><a class="main-menu-second-level-li-a" href="#">Manage Dashboards</a></li>
             </ul>
         </li>
         <li class="main-menu-li">
-            <a href="#">BigGantt </a>
-            <ul class="dashboard_sub_menu">
-                <li><a href="#">View System Dashboards</a></li>
-                <li><a href="#">Manage Dashboards</a></li>
+            <a  class="main-menu-li-a" href="#">BigGantt </a>
+            <ul class="main-menu-second-level-ul">
+                <li class="main-menu-second-level-li"><a class="main-menu-second-level-li-a" href="#">View System Dashboards</a></li>
+                <li class="main-menu-second-level-li"><a class="main-menu-second-level-li-a" href="#">Manage Dashboards</a></li>
             </ul>
         </li>
         <li class="main-menu-li">
-            <a href="#">eazyBI </a>
-            <ul class="dashboard_sub_menu">
-                <li><a href="#">View System Dashboards</a></li>
-                <li><a href="#">Manage Dashboards</a></li>
+            <a  class="main-menu-li-a" href="#">eazyBI </a>
+            <ul class="main-menu-second-level-ul">
+                <li class="main-menu-second-level-li"><a href="#">View System Dashboards</a></li>
+                <li class="main-menu-second-level-li"><a href="#">Manage Dashboards</a></li>
             </ul>
         </li>
         <li class="main-menu-li"><button type="button" id="CreateButton">Create</button> </li>
