--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
 <nav class="nav-main-menu" id="div_main_menu">
 
-    <div class="inline-block-divs">
+    <div class="elements-main-menu inline-block-divs">
         <a id = "wix_home" href="https://jira.wixpress.com/secure/MyJiraHome.jspa">
             <img src="https://michalhonig.github.io/Exercise/images/jira-logo-scaled.png">
         </a>
     </div>
 
-    <ul class="main-menu-ul" id="menu_list">
+    <ul class="main-menu-ul elements-main-menu">
         <li class="main-menu-li">
             <a class="main-menu-li-a" href="#">Dashboards </a>
             <ul class="main-menu-second-level-ul">
@@ -64,14 +64,14 @@
         <li class="main-menu-li">
             <a  class="main-menu-li-a" href="#">eazyBI </a>
             <ul class="main-menu-second-level-ul">
-                <li class="main-menu-second-level-li"><a href="#">View System Dashboards</a></li>
-                <li class="main-menu-second-level-li"><a href="#">Manage Dashboards</a></li>
+                <li class="main-menu-second-level-li"><a class="main-menu-second-level-li-a" href="#">View System Dashboards</a></li>
+                <li class="main-menu-second-level-li"><a class="main-menu-second-level-li-a" href="#">Manage Dashboards</a></li>
             </ul>
         </li>
         <li class="main-menu-li"><button type="button" id="CreateButton">Create</button> </li>
     </ul>
 
-    <form id="SerchButton">
+    <form class ="elements-main-menu" id="SerchButton">
         <input placeholder="Search" type="text" name="serch_fileds">
     </form>
 </nav>
@@ -84,7 +84,7 @@
         <img id="introduction_img" src="https://michalhonig.github.io/Exercise/images/64jira.png">
         <div>
             <h4> Welcome to JIRA</h4>
-            <p class="small-p"id="new_to_jira">New to JIRA? Check out the <a href="https://confluence.atlassian.com/jira063/jira-user-s-guide-683542423.html"> JIRA User's Guide. </a></p>
+            <p class="small-p">New to JIRA? Check out the <a href="https://confluence.atlassian.com/jira063/jira-user-s-guide-683542423.html"> JIRA User's Guide. </a></p>
         </div>
     </div>
     <div class="contents-divs inline-block-divs divs-first-row" id="favorite_filters">
