--- a/index.html
+++ b/index.html
@@ -8,127 +8,138 @@
 
 <body>
 
-<nav class="nav-main-menu" id="div_main_menu">
+<nav class="main-menu">
+    <ul>
+    <li>
+        <div> Dashboards
+            <ul>
+                <li> <a href="https://jira.wixpress.com/secure/Dashboard.jspa"> View System Dashboards</a> </li>
+                <li> <a href="https://jira.wixpress.com/secure/ConfigurePortalPages!default.jspa"> Manage Dashboards </a> </li>
+            </ul>
+        </div>
+    </li>
+    <li>
+        <div> Projects
+            <strong> CURRENT PROJECT </strong>
+            <ul>
+                <li> <a href="https://jira.wixpress.com/secure/Dashboard.jspa"> View System Dashboards </a> </li>
+                <li> <a href="https://jira.wixpress.com/secure/ConfigurePortalPages!default.jspa"> Manage Dashboards </a> </li>
+            </ul>
 
-    <div class="elements-main-menu inline-block-divs">
-        <a id = "wix_home" href="https://jira.wixpress.com/secure/MyJiraHome.jspa">
-            <img src="https://michalhonig.github.io/Exercise/images/jira-logo-scaled.png">
-        </a>
-    </div>
+        </div>
+    </li>
+    <li>
+        <div> Issues
+            <ul>
+                <li> <a href="https://jira.wixpress.com/secure/Dashboard.jspa"> View System Dashboards </a> </li>
+                <li> <a href="https://jira.wixpress.com/secure/ConfigurePortalPages!default.jspa"> Manage Dashboards </a> </li>
+            </ul>
 
-    <ul class="main-menu-ul elements-main-menu">
-        <li class="main-menu-li">
-            <a class="main-menu-li-a" href="#">Dashboards </a>
-            <ul class="main-menu-second-level-ul">
-                <li class="main-menu-second-level-li"><a class="main-menu-second-level-li-a" href="#">View System Dashboards</a></li>
-                <li class="main-menu-second-level-li"><a class="main-menu-second-level-li-a" href="https://jira.wixpress.com/secure/ConfigurePortalPages!default.jspa">Manage Dashboards</a></li>
+        </div>
+    </li>
+    <li>
+        <div> Aglie
+            <ul>
+                <li> <a href="https://jira.wixpress.com/secure/Dashboard.jspa"> View System Dashboards </a> </li>
+                <li> <a href="https://jira.wixpress.com/secure/ConfigurePortalPages!default.jspa"> Manage Dashboards </a> </li>
             </ul>
-        </li>
-        <li class="main-menu-li">
-            <a class="main-menu-li-a" href="#">Projects</a>
-            <ul class="main-menu-second-level-ul">
-                <strong class="menu_list_header_list">Currnet Project</strong>
 
-                <li class="main-menu-second-level-li"><a class="main-menu-second-level-li-a" href="#">View System Dashboards</a></li>
-                <li class="main-menu-second-level-li"><a class="main-menu-second-level-li-a" href="#">Manage Dashboards</a></li>
+        </div>
+    </li>
+    <li>
+        <div> Tests
+            <ul>
+                <li> <a href="https://jira.wixpress.com/secure/Dashboard.jspa"> View System Dashboards </a> </li>
+                <li> <a href="https://jira.wixpress.com/secure/ConfigurePortalPages!default.jspa"> Manage Dashboards </a> </li>
             </ul>
-        </li>
-        <li class="main-menu-li">
-            <a  class="main-menu-li-a" href="#">Issues</a>
-            <ul class="main-menu-second-level-ul">
-                <li class="main-menu-second-level-li"><a class="main-menu-second-level-li-a" href="#">View System Dashboards</a></li>
-                <li class="main-menu-second-level-li"><a class="main-menu-second-level-li-a" href="#">Manage Dashboards</a></li>
+
+        </div>
+    </li>
+    <li>
+        <div> BigGantt
+            <ul>
+                <li> <a href="https://jira.wixpress.com/secure/Dashboard.jspa"> View System Dashboards </a> </li>
+                <li> <a href="https://jira.wixpress.com/secure/ConfigurePortalPages!default.jspa"> Manage Dashboards </a> </li>
             </ul>
-        </li>
-        <li class="main-menu-li">
-            <a  class="main-menu-li-a" href="#">Aglie</a>
-            <ul class="main-menu-second-level-ul">
-                <li class="main-menu-second-level-li"><a class="main-menu-second-level-li-a" href="#">View System Dashboards</a></li>
-                <li class="main-menu-second-level-li"><a class="main-menu-second-level-li-a" href="#">Manage Dashboards</a></li>
+
+        </div>
+    </li>
+    <li>
+        <div> eazyBI
+            <ul>
+                <li> <a href="https://jira.wixpress.com/secure/Dashboard.jspa"> View System Dashboards </a> </li>
+                <li> <a href="https://jira.wixpress.com/secure/ConfigurePortalPages!default.jspa"> Manage Dashboards </a> </li>
             </ul>
-        </li>
-        <li class="main-menu-li">
-            <a  class="main-menu-li-a" href="#">Tests </a>
-            <ul class="main-menu-second-level-ul">
-                <li class="main-menu-second-level-li"><a class="main-menu-second-level-li-a" href="#">View System Dashboards</a></li>
-                <li class="main-menu-second-level-li"><a class="main-menu-second-level-li-a" href="#">Manage Dashboards</a></li>
-            </ul>
-        </li>
-        <li class="main-menu-li">
-            <a  class="main-menu-li-a" href="#">BigGantt </a>
-            <ul class="main-menu-second-level-ul">
-                <li class="main-menu-second-level-li"><a class="main-menu-second-level-li-a" href="#">View System Dashboards</a></li>
-                <li class="main-menu-second-level-li"><a class="main-menu-second-level-li-a" href="#">Manage Dashboards</a></li>
-            </ul>
-        </li>
-        <li class="main-menu-li">
-            <a  class="main-menu-li-a" href="#">eazyBI </a>
-            <ul class="main-menu-second-level-ul">
-                <li class="main-menu-second-level-li"><a class="main-menu-second-level-li-a" href="#">View System Dashboards</a></li>
-                <li class="main-menu-second-level-li"><a class="main-menu-second-level-li-a" href="#">Manage Dashboards</a></li>
-            </ul>
-        </li>
-        <li class="main-menu-li"><button type="button" id="CreateButton">Create</button> </li>
+
+        </div>
+    </li>
+        <li><button type="button" id="CreateButton">Create</button> </li>
     </ul>
-
-    <form class ="elements-main-menu" id="SerchButton">
+    <form>
         <input placeholder="Search" type="text" name="serch_fileds">
     </form>
+
 </nav>
 
-<h1 id ="system_dashboard"> System Dashboard </h1>
+<h1> System Dashboard </h1>
 
-<div class="content-main-div">
-    <div class="contents-divs inline-block-divs divs-first-row" id="introduction">
-        <h3>Introduction</h3>
-        <img id="introduction_img" src="https://michalhonig.github.io/Exercise/images/64jira.png">
+<div class="contents">
+    <div class="left-contens">
+          <div>
+              <h3>Introduction</h3>
+              <img src="https://michalhonig.github.io/Exercise/images/64jira.png">
+              <div class="introduction_inner">
+                    <h4> Welcome to JIRA</h4>
+                    <p class="small-p">New to JIRA? Check out the <a href="https://confluence.atlassian.com/jira063/jira-user-s-guide-683542423.html"> JIRA User's Guide. </a></p>
+              </div>
+          </div>
         <div>
-            <h4> Welcome to JIRA</h4>
-            <p class="small-p">New to JIRA? Check out the <a href="https://confluence.atlassian.com/jira063/jira-user-s-guide-683542423.html"> JIRA User's Guide. </a></p>
+            <h3>Assigned to Me</h3>
+            <p>There are no issues assigned to you.</p>
         </div>
-    </div>
-    <div class="contents-divs inline-block-divs divs-first-row" id="favorite_filters">
-        <h3>Favorite Filters</h3>
-        <p> You have no favorite filters at the moment.</p>
+
         <div >
-            <a href="https://jira.wixpress.com/browse/WTS-31?jql=">Create Filter</a> |
-            <a href="https://jira.wixpress.com/secure/ManageFilters.jspa"> Manage Filter</a>
+            <h3>Activity Stream</h3>
+            <h2>jira</h2>
+        </div>
+    </div>
+    <div class="right-contens">
+        <div>
+            <h3>Favorite Filters</h3>
+            <p> You have no favorite filters at the moment.</p>
+            <div >
+                <a href="https://jira.wixpress.com/browse/WTS-31?jql=">Create Filter</a> |
+                <a href="https://jira.wixpress.com/secure/ManageFilters.jspa"> Manage Filter</a>
+            </div>
         </div>
     </div>
 
-    <div class="contents-divs block-divs">
-        <h3>Assigned to Me</h3>
-        <p>There are no issues assigned to you.</p>
-    </div>
-
-    <div class="contents-divs block-divs">
-        <h3>Activity Stream</h3>
-        <h2>jira</h2>
-    </div>
 </div>
 
-<footer class= "footer-main-div">
-    <ul class="footer-ul">
-        <li class="footer-li"> Atlassian JIRA
+
+<footer class= "footer">
+    <ul >
+        <li> Atlassian JIRA
             <a href="https://www.atlassian.com/software/jira"> <span>Project Management Software </span></a>
             <span>(v6.3.1#6329-sha1:7df76f1)</span>
         </li>
 
-        <li class="footer-li">
+        <li>
             <a href="https://jira.wixpress.com/secure/AboutPage.jspa"><span> About JIRA </span> </a>
         </li>
 
 
-        <li class="footer-li">
+        <li>
             <a href="https://jira.wixpress.com/secure/ContactAdministrators!default.jspa"> <span> Report a problem </span></a>
         </li>
     </ul>
 
     <div >
         <img src="https://michalhonig.github.io/Exercise/images/64jira.png">
-        <a class="none-link" id="attlasian_link" href="http://www.atlassian.com/"><span id="body_atlassian">Atlassian</span></a>
+        <a class="atlassian-link" href="http://www.atlassian.com/"><span id="body_atlassian">Atlassian</span></a>
     </div>
 </footer>
+
 
 </body>
 </html>
