Using google fonts

--- a/CV/index.html
+++ b/CV/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>CV - Michal Honig</title>
     <link href="normalize.css" type="text/css" media="screen" rel="stylesheet" />
+    <link href="cv.css" type="text/css" media="screen" rel="stylesheet" />
 </head>
 
 <body>
