google fonts - work according to google requirment

--- a/CV/index.html
+++ b/CV/index.html
@@ -4,22 +4,25 @@
 <head>
     <title>CV - Michal Honig</title>
     <link href="normalize.css" type="text/css" media="screen" rel="stylesheet" />
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans|Tangerine' rel='stylesheet' type='text/css'>
     <link href="cv.css" type="text/css" media="screen" rel="stylesheet" />
 </head>
 
 <body>
 
 <article>
+    <h1>Curriculum Vitae</h1>
     <section>
+
         <h2>Personal Details</h2>
         <ul>
-            <li><label>Name: </label><span>Michal Honig (Almani)</span></li>
-            <li><label>ID No: </label><span>060517356</span></li>
-            <li><label>Date of Birth: </label><span>04/08/1982</span></li>
-            <li><label>Marital Status: </label><span>Married +2</span></li>
-            <li><label>Address:</label><address>Golomb 36A, Ramat Hasharon</address></li>
-            <li><label>Mobile: </label><a href="tel:050-2560930">050-2560930</a></li>
-            <li><label>E-Mail: </label><a href="honig.michal@gmail.com">honig.michal@gmail.com</a></li>
+            <li><label>Name</label><span>Michal Honig (Almani)</span></li>
+            <li><label>ID No</label><span>060517356</span></li>
+            <li><label>Date of Birth</label><span>04/08/1982</span></li>
+            <li><label>Marital Status</label><span>Married +2</span></li>
+            <li><label>Address</label><address>Golomb 36A, Ramat Hasharon</address></li>
+            <li><label>Mobile</label><a href="tel:050-2560930">050-2560930</a></li>
+            <li><label>E-Mail</label><a href="honig.michal@gmail.com">honig.michal@gmail.com</a></li>
         </ul>
     </section>
 
