CV - using css pseudo elements

--- a/CV/index.html
+++ b/CV/index.html
@@ -11,9 +11,9 @@
 <body>
 
 <article>
+
     <h1>Curriculum Vitae</h1>
     <section>
-
         <h2>Personal Details</h2>
         <ul>
             <li><label>Name</label><span>Michal Honig (Almani)</span></li>
@@ -83,11 +83,12 @@
     <section>
         <h2>Languages</h2>
         <ul>
-            <li><label>Hebrew</label> - Native language</li>
-            <li><label>English</label> - Fluent written and spoken</li>
+            <li><label>Hebrew</label>Native language</li>
+            <li><label>English</label>Fluent written and spoken</li>
         </ul>
     </section>
     <small>Documents and recommendations will be submitted upon request</small>
+
 </article>
 
 </body>
